src/components/workspace/ABIUi/ABIUi.module.scss
.root {
  padding: 1rem 0px;
  position: relative;
  &:before,
  &.tact .form:not(:last-child)::before {
    content: '';
    position: absolute;
    bottom: -0.8rem;
    left: 0;
    right: 0;
    width: 5rem;
    height: 1px;
    margin: 0 auto;
    background-color: #373636;
  }
  &.tact {
    .form {
      position: relative;
      &:not(:last-child):not(:first-child) {
        margin: 1.6rem 0px;
      }
    }
    &::before {
      display: none;
    }
  }
  .nestedForm {
    margin: 0.5rem 0;
    background: rgba(14, 14, 16, 0.9);
    border-radius: 5px;
    padding: 5px;

    > div {
      border-left: 0 !important;
    }
  }
  .abiResponse {
    word-break: break-word;
  }
  .btnAction {
    font-size: 0.8rem;
    padding: 0;
    width: 100%;
    & [class*='wave-motion'] {
      display: none !important;
    }
  }
  .abiResponse {
    font-weight: 500;
    color: #a0e67d;
    margin-top: 0.5rem;
    padding: 5px;
  }
  &.Getter {
    .btnAction {
      border: 0;
      box-shadow: none;
      background: #232222;
    }
  }
  &.Setter {
    .btnAction {
      border: solid 1px transparent;
      background-image: linear-gradient(rgb(20, 20, 20), rgb(20, 20, 20)),
        var(--primary-gradient);
      background-origin: border-box;
      background-clip: content-box, border-box;
      box-shadow: none;
      z-index: 0;
      &:hover {
        border-color: transparent;
        color: #fff;
        &:before {
          background: #101010;
        }
      }

      &:before {
        content: '';
        position: absolute;
        left: 0;
        top: 0;
        bottom: 0;
        right: 0;
        background: #000;
        z-index: -1;
        border-radius: inherit;
      }
    }
  }
}

.structName {
  font-size: 0.8rem;
  font-weight: 500;
  color: var(--primary);
  padding: 5px;
}

.formItemABI {
  margin-bottom: 3px;
}

